generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum EventStatus {
  SCHEDULED
  CANCELLED
  FINISHED
  FULL
}

model User {
  id                 Int                       @id @default(autoincrement())
  email              String                    @unique
  password           String
  name               String?
  avatar             String?
  bio                String?
  location           String?
  role               String                    @default("user")
  isVerified         Boolean                   @default(false)
  themePreference    String?
  createdAt          DateTime                  @default(now())
  updatedAt          DateTime                  @updatedAt
  interests          String[]                  @default([])
  bookings           Booking[]
  comments           Comment[]
  conversations      ConversationParticipant[]
  organizedEvents    Event[]
  favorites          Favorite[]
  groupsOwned        Group[]
  messagesSent       Message[]
  notifications      Notification[]
  reviews            Review[]
  userGroups         UserGroup[]
  validatedTickets   Ticket[]                  @relation("ValidatedTickets")
  invalidatedTickets Ticket[]                  @relation("InvalidatedTickets")
  ticketAuditLogs    TicketAuditLog[]
  statusChanges      EventStatusLog[]          @relation("UserStatusChanges")
  verificationTokens VerificationToken[]

  @@map("users")
}

model Category {
  id          Int      @id @default(autoincrement())
  name        String   @unique
  description String?
  color       String   @default("#3B82F6")
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
  events      Event[]

  @@map("categories")
}

model Place {
  id               Int      @id @default(autoincrement())
  externalPlaceId  String?  @unique
  formattedAddress String?
  city             String?
  country          String?
  postalCode       String?
  locationMetadata String?
  latitude         Decimal? @db.Decimal(10, 8)
  longitude        Decimal? @db.Decimal(11, 8)
  createdAt        DateTime @default(now())

  events Event[]

  @@index([city])
  @@index([latitude, longitude])
  @@map("places")
}

model Event {
  id              Int              @id @default(autoincrement())
  slug            String?          @unique
  title           String
  description     String?
  date            DateTime
  location        String
  capacity        Int
  status          EventStatus      @default(SCHEDULED)
  imageUrl        String?
  price           Float            @default(0)
  organizerId     Int
  categoryId      Int
  locationId      Int?
  createdAt       DateTime         @default(now())
  updatedAt       DateTime         @updatedAt
  averageRating   Float            @default(0)
  reviewCount     Int              @default(0)
  currentBookings Int              @default(0)
  bookings        Booking[]
  comments        Comment[]
  category        Category         @relation(fields: [categoryId], references: [id])
  organizer       User             @relation(fields: [organizerId], references: [id])
  place           Place?           @relation(fields: [locationId], references: [id])
  favorites       Favorite[]
  reviews         Review[]
  ticketTypes     TicketType[]
  notifications   Notification[]
  statusLogs      EventStatusLog[]

  @@index([date])
  @@index([status])
  @@index([reviewCount])
  @@index([status, date])
  @@index([status, price])
  @@index([status, averageRating])
  @@index([categoryId, status])
  @@index([status, currentBookings, capacity])
  @@index([organizerId, status, date])
  @@map("events")
}

model EventStatusLog {
  id          Int         @id @default(autoincrement())
  eventId     Int
  fromStatus  EventStatus
  toStatus    EventStatus
  reason      String      @default("")
  changedById Int?
  createdAt   DateTime    @default(now())

  event     Event @relation(fields: [eventId], references: [id], onDelete: Cascade)
  changedBy User? @relation("UserStatusChanges", fields: [changedById], references: [id], onDelete: SetNull)

  @@index([eventId])
  @@index([eventId, createdAt])
  @@index([toStatus])
  @@map("event_status_logs")
}

model TicketType {
  id       Int       @id @default(autoincrement())
  name     String
  price    Float
  quantity Int
  eventId  Int
  Booking  Booking[]
  event    Event     @relation(fields: [eventId], references: [id])

  @@unique([eventId, name])
  @@map("ticket_types")
}

model Booking {
  id           Int         @id @default(autoincrement())
  quantity     Int
  totalPrice   Float
  status       String      @default("pending")
  bookedAt     DateTime    @default(now())
  cancelledAt  DateTime?
  userId       Int
  ticketTypeId Int?
  eventId      Int
  Event        Event       @relation(fields: [eventId], references: [id])
  ticketType   TicketType? @relation(fields: [ticketTypeId], references: [id])
  user         User        @relation(fields: [userId], references: [id])
  payment      Payment?
  ticket       Ticket?

  @@index([userId])
  @@index([userId, status])
  @@map("bookings")
}

model Payment {
  id              Int      @id @default(autoincrement())
  stripePaymentId String   @unique
  amount          Float
  currency        String   @default("EUR")
  status          String
  bookingId       Int      @unique
  createdAt       DateTime @default(now())
  booking         Booking  @relation(fields: [bookingId], references: [id])

  @@map("payments")
}

model Favorite {
  userId    Int
  eventId   Int
  createdAt DateTime @default(now())
  event     Event    @relation(fields: [eventId], references: [id])
  user      User     @relation(fields: [userId], references: [id])

  @@id([userId, eventId])
  @@index([eventId])
  @@index([userId, createdAt])
  @@map("favorites")
}

model Comment {
  id        Int       @id @default(autoincrement())
  content   String
  createdAt DateTime  @default(now())
  userId    Int
  eventId   Int
  parentId  Int?
  status    String    @default("approved")
  updatedAt DateTime  @updatedAt
  event     Event     @relation(fields: [eventId], references: [id])
  parent    Comment?  @relation("CommentReplies", fields: [parentId], references: [id])
  replies   Comment[] @relation("CommentReplies")
  user      User      @relation(fields: [userId], references: [id])

  @@index([eventId, status, createdAt])
  @@index([userId])
  @@index([parentId])
  @@map("comments")
}

model Review {
  id        Int      @id @default(autoincrement())
  rating    Int
  createdAt DateTime @default(now())
  userId    Int
  eventId   Int
  updatedAt DateTime @updatedAt
  event     Event    @relation(fields: [eventId], references: [id], onDelete: Cascade)
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([userId, eventId])
  @@index([eventId])
  @@index([userId])
  @@index([eventId, rating])
  @@map("reviews")
}

model Notification {
  id        Int      @id @default(autoincrement())
  type      String
  title     String   @default("")
  message   String
  link      String?
  eventId   Int?
  isRead    Boolean  @default(false)
  userId    Int
  createdAt DateTime @default(now())

  user  User   @relation(fields: [userId], references: [id], onDelete: Cascade)
  event Event? @relation(fields: [eventId], references: [id], onDelete: SetNull)

  @@index([userId, isRead])
  @@index([userId, createdAt])
  @@index([createdAt])
  @@map("notifications")
}

model Group {
  id          Int         @id @default(autoincrement())
  slug        String?     @unique
  name        String
  description String?
  ownerId     Int
  createdAt   DateTime    @default(now())
  owner       User        @relation(fields: [ownerId], references: [id])
  members     UserGroup[]

  @@map("groups")
}

model UserGroup {
  userId   Int
  groupId  Int
  role     String   @default("member")
  joinedAt DateTime @default(now())
  group    Group    @relation(fields: [groupId], references: [id])
  user     User     @relation(fields: [userId], references: [id])

  @@id([userId, groupId])
  @@map("user_groups")
}

model Conversation {
  id           Int                       @id @default(autoincrement())
  createdAt    DateTime                  @default(now())
  participants ConversationParticipant[]
  messages     Message[]

  @@map("conversations")
}

model ConversationParticipant {
  conversationId Int
  userId         Int
  conversation   Conversation @relation(fields: [conversationId], references: [id])
  user           User         @relation(fields: [userId], references: [id])

  @@id([conversationId, userId])
  @@map("conversation_participants")
}

model Message {
  id             Int          @id @default(autoincrement())
  content        String
  createdAt      DateTime     @default(now())
  read           Boolean      @default(false)
  conversationId Int
  senderId       Int
  conversation   Conversation @relation(fields: [conversationId], references: [id])
  sender         User         @relation(fields: [senderId], references: [id])

  @@index([conversationId, createdAt])
  @@map("messages")
}

model Ticket {
  id                 Int       @id @default(autoincrement())
  token              String    @unique @db.Uuid
  status             String    @default("valid")
  bookingId          Int       @unique
  scannedAt          DateTime?
  validatedById      Int?
  invalidatedAt      DateTime?
  invalidatedById    Int?
  invalidationReason String?
  createdAt          DateTime  @default(now())
  updatedAt          DateTime  @updatedAt

  booking       Booking          @relation(fields: [bookingId], references: [id], onDelete: Cascade)
  validatedBy   User?            @relation("ValidatedTickets", fields: [validatedById], references: [id])
  invalidatedBy User?            @relation("InvalidatedTickets", fields: [invalidatedById], references: [id])
  auditLogs     TicketAuditLog[]

  @@index([token])
  @@index([status])
  @@index([bookingId])
  @@index([status, createdAt])
  @@index([status, bookingId])
  @@map("tickets")
}

model TicketAuditLog {
  id        Int      @id @default(autoincrement())
  ticketId  Int
  action    String
  userId    Int?
  metadata  String?
  createdAt DateTime @default(now())

  ticket Ticket @relation(fields: [ticketId], references: [id], onDelete: Cascade)
  user   User?  @relation(fields: [userId], references: [id], onDelete: SetNull)

  @@index([ticketId])
  @@index([action])
  @@index([ticketId, createdAt])
  @@index([createdAt])
  @@map("ticket_audit_logs")
}

model VerificationToken {
  id        Int      @id @default(autoincrement())
  token     String   @unique
  userId    Int
  expiresAt DateTime
  createdAt DateTime @default(now())

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([token])
  @@index([userId])
  @@map("verification_tokens")
}
