@startuml class-diagram

title Diagrama de Entidades - Notación Crow's Foot

skinparam linetype ortho
left to right direction
skinparam shadowing false
skinparam backgroundColor #FFFFFF
hide circle
hide empty methods
hide empty fields

' === ENTIDADES PRINCIPALES ===

entity "User" as user {
    * id : INTEGER <<PK>>
    --
    * email : VARCHAR <<UK>>
}

entity "Category" as category {
    * id : INTEGER <<PK>>
    --
    * name : VARCHAR <<UK>>
}

entity "Place" as place {
    * id : INTEGER <<PK>>
    --
    externalPlaceId : VARCHAR <<UK>>
}

entity "Event" as event {
    * id : INTEGER <<PK>>
    --
    slug : VARCHAR <<UK>>
    * organizerId : INTEGER <<FK>>
    * categoryId : INTEGER <<FK>>
    locationId : INTEGER <<FK>>
}

entity "TicketType" as ticketType {
    * id : INTEGER <<PK>>
    --
    * eventId : INTEGER <<FK>>
}

entity "Booking" as booking {
    * id : INTEGER <<PK>>
    --
    * userId : INTEGER <<FK>>
    ticketTypeId : INTEGER <<FK>>
    * eventId : INTEGER <<FK>>
}

entity "Ticket" as ticket {
    * id : INTEGER <<PK>>
    --
    * token : UUID <<UK>>
    * bookingId : INTEGER <<FK>>
    validatedById : INTEGER <<FK>>
    invalidatedById : INTEGER <<FK>>
}

entity "Comment" as comment {
    * id : INTEGER <<PK>>
    --
    * userId : INTEGER <<FK>>
    * eventId : INTEGER <<FK>>
    parentId : INTEGER <<FK>>
}

entity "Review" as review {
    * id : INTEGER <<PK>>
    --
    * userId : INTEGER <<FK>>
    * eventId : INTEGER <<FK>>
}

entity "Notification" as notification {
    * id : INTEGER <<PK>>
    --
    * userId : INTEGER <<FK>>
    eventId : INTEGER <<FK>>
}

entity "Favorite" as favorite {
    --
    * userId : INTEGER <<FK>>
    * eventId : INTEGER <<FK>>
    * createdAt : TIMESTAMP
}

' === ENTIDADES AUXILIARES / AUDITORÍA ===

entity "EventStatusLog" as eventStatusLog {
    * id : INTEGER <<PK>>
    --
    * eventId : INTEGER <<FK>>
    changedById : INTEGER <<FK>>
}

entity "TicketAuditLog" as ticketAuditLog {
    * id : INTEGER <<PK>>
    --
    * ticketId : INTEGER <<FK>>
    userId : INTEGER <<FK>>
}

entity "VerificationToken" as verificationToken {
    * id : INTEGER <<PK>>
    --
    * token : VARCHAR <<UK>>
    * userId : INTEGER <<FK>>
}

' === RELACIONES CROW'S FOOT ===

' -- Autenticación
user ||--o{ verificationToken : "tiene"

' -- Usuario organiza eventos
user ||--o{ event : "organiza"

' -- Favoritos (tabla intermedia N:M)
user ||--o{ favorite : "marca"
event ||--o{ favorite : "es marcado"

' -- Categoría y lugar
category ||--o{ event : "clasifica"
place |o--o{ event : "aloja"

' -- Evento y contenido / reservas
event ||--o{ ticketType : "define"
event ||--o{ booking : "contiene"
event ||--o{ comment : "tiene"
event ||--o{ review : "recibe"
event ||--o{ notification : "genera"
event ||--o{ eventStatusLog : "registra"

' -- TicketType y Booking
ticketType |o--o{ booking : "reservado"

' -- Booking y Ticket (1 a 0..1)
booking ||--|o ticket : "genera"

' -- Usuario y reservas / comentarios / reseñas / notificaciones
user ||--o{ booking : "realiza"
user ||--o{ comment : "escribe"
user ||--o{ review : "escribe"
user ||--o{ notification : "recibe"

' -- Comentarios auto-referenciados (respuestas)
comment |o--o{ comment : "responde"

' -- Ticket y auditoría
ticket ||--o{ ticketAuditLog : "auditado"
user |o--o{ ticketAuditLog : "registra"

' -- Validación e invalidación de tickets
user |o--o{ ticket : "valida"
user |o--o{ ticket : "invalida"

' -- EventStatusLog
user |o--o{ eventStatusLog : "cambia"

@enduml